@@ -1,0 +1,11 @@
+package log
+
+const (
+	DebugLevel = "debug" // default level
+	InfoLevel  = "info"
+	WarnLevel  = "warn"
+	ErrorLevel = "error"
+	InConsole  = "console"
+	InFile     = "file"
+	InAll      = "all"
+)
