@@ -11,3 +11,4 @@ add excel ValidTitle
 optimize valid ValidSliceError
 add request/response msg
 loadYaml error
+change log logrus to zap
